# stat-arb-research-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: daily_research_check.py  generate_sample_report.py
src/stat_arb_engine/: __init__.py
src/stat_arb_engine/backtesting/: __init__.py  decay.py  metrics.py  regimes.py  stress.py  walk_forward.py
src/stat_arb_engine/data/: __init__.py  schema.py
src/stat_arb_engine/domain/: __init__.py  instruments.py
src/stat_arb_engine/execution/: __init__.py  costs.py
src/stat_arb_engine/portfolio/: __init__.py  constraints.py  construction.py
src/stat_arb_engine/reporting/: __init__.py  artifacts.py  charts.py  summary.py
src/stat_arb_engine/research/: __init__.py  cointegration.py  kalman.py  ou.py
src/stat_arb_engine/risk/: __init__.py  capacity.py  exposure.py
src/stat_arb_engine/signals/: __init__.py  thresholds.py
src/stat_arb_engine/utils/: __init__.py  arrays.py
tests/backtesting/: test_metrics.py
tests/execution/: test_costs.py
tests/portfolio/: test_construction.py
tests/reporting/: test_artifacts.py  test_charts.py
tests/research/: test_models.py
tests/risk/: test_capacity.py  test_exposure.py
